modificacion del titulo

--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Formulario de registro de vehículos</title>
+    <title>Formulario de registro de vehículos Prueba</title>
     <!-- Agregamos los estilos de Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Agregamos los estilos de Bootstrap -->
@@ -537,7 +537,7 @@
 
         <!-- Noveno formulario -->
         <div class="tab-pane" id="formulario9">
-          <h1>Agregar usuario</h1>
+          <h1>Agregar usuarios</h1>
           <div class="border p-3">
             <form class="row">
               <div class="form-group">
