--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Formulario de registro de vehículos Prueba</title>
+    <title>Formularios del proyecto taller</title>
     <!-- Agregamos los estilos de Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Agregamos los estilos de Bootstrap -->
@@ -15,8 +15,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
   </head>
-
-
   <body>
     <div class="container">
 
